crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__ipython_escape_command_line_continuation_mac_eol.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: ipython_escape_command_line_continuation_eol(MAC_EOL)
---
## Tokens
```
[
    (
        IpyEscapeCommand {
            value: "matplotlib   --inline",
            kind: Magic,
        },
        0..24,
    ),
    (
        Newline,
        24..24,
    ),
]
```
