crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__ipython_escape_command_line_continuation_windows_eol.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: ipython_escape_command_line_continuation_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        IpyEscapeCommand {
            value: "matplotlib   --inline",
            kind: Magic,
        },
        0..25,
    ),
    (
        Newline,
        25..25,
    ),
]
```
