crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__line_comment_whitespace.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(&source)
---
## Tokens
```
[
    (
        Int(
            99232,
        ),
        0..5,
    ),
    (
        Comment,
        7..10,
    ),
    (
        Newline,
        10..10,
    ),
]
```
