crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__logical_newline_line_comment.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        Comment,
        0..6,
    ),
    (
        NonLogicalNewline,
        6..7,
    ),
    (
        Comment,
        7..13,
    ),
    (
        NonLogicalNewline,
        13..14,
    ),
]
```
